--- a/env/.env.sandbox
+++ b/env/.env.sandbox
@@ -1,1 +1,5 @@
-# VITE_API_URL = "http://192.168.101.180:3000/web3/"
+# 预发布环境
+VITE_API_URL = "https://test.decheck.io/decheck-apis"
+VITE_LOGIN_URL = "https://www.2web3.net/test-user-center"
+VITE_SIGN_TEXT = "Welcome to DeCheck! Click to sign in and accept the DeCheck Terms of Service: https://decheck.io This request will not trigger a blockchain transaction or cost any gas fees."
+VITE_LOGIN_ID = "1646086759245303808"
