--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "devDependencies": {
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
+    "@vant/nuxt": "^1.0.1",
     "autoprefixer": "^10.4.14",
     "nuxt": "^3.3.2",
     "postcss-px-to-viewport-8-plugin": "^1.2.2",
+    "vant": "^4.4.0",
     "vue-i18n": "^9.2.2"
   },
   "dependencies": {
