--- a/env/.env
+++ b/env/.env
@@ -1,9 +1,9 @@
 
-# VITE_API_URL = "http://192.168.101.12:9998/decheck-apis"
-# VITE_LOGIN_URL = "http://192.168.101.3:9488"
+VITE_API_URL = "http://192.168.101.12:9998/decheck-apis"
+VITE_LOGIN_URL = "http://192.168.101.3:9488"
 
 # 预发布环境
-VITE_API_URL = "https://decheck.io/decheck-apis"
-VITE_LOGIN_URL = "https://www.2web3.net/user-center"
+# VITE_API_URL = "https://test.decheck.io/decheck-apis"
+# VITE_LOGIN_URL = "https://www.2web3.net/test-user-center"
 VITE_SIGN_TEXT = "Welcome to DeCheck! Click to sign in and accept the DeCheck Terms of Service: https://decheck.io This request will not trigger a blockchain transaction or cost any gas fees."
 VITE_LOGIN_ID = "1646086759245303808"
