--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.3.5",
     "core-js": "^3.30.1",
     "element-plus": "^2.3.2",
+    "firebase": "^9.22.1",
     "pinia": "^2.0.33",
     "pinia-plugin-persistedstate": "^3.1.0",
     "swiper": "^9.0.3",
